Fix subtitle alignment

--- a/app/src/scss/articles.scss
+++ b/app/src/scss/articles.scss
@@ -6,8 +6,7 @@
   }
 
   h2 {
-    // display: inline;
-    margin: 0;
+    display: inline;
     font-size: 14px;
     font-weight: 400;
   }
